Thu Jul 25 11:32:41 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/README:

          Added a little more detail about what the depends keyword refers
          to.

        * bin/MakeProjectCreator/USAGE:
        * bin/MakeProjectCreator/modules/Driver.pm:

          Changed the code to show the default type in the usage message.

        * bin/MakeProjectCreator/modules/GNUWorkspaceCreator.pm:

          Change the workspace to use a for loop when building on UNIX.

        * tests/RMCast/tests.mpc:
        * tests/SSL/tests.mpc:

          Fixed the case on the dependencies lines.

Wed Jul 24 13:38:40 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/Driver.pm:
        * bin/MakeProjectCreator/modules/ProjectCreator.pm:
        * bin/MakeProjectCreator/modules/WorkspaceCreator.pm:

          Added a progress indicator (for those big workspaces).

Wed Jul 24 13:10:19 2002  Chad Elliott  <elliott_c@ociweb.com>

        * bin/MakeProjectCreator/modules/ProjectCreator.pm:

          Add README and readme to the default documentation
          files.

        * bin/MakeProjectCreator/modules/Creator.pm:
        * bin/MakeProjectCreator/modules/GUID.pm:
        * bin/MakeProjectCreator/modules/VC7ProjectCreator.pm:

          Change the GUID generation code to be deterministic (but still
          unique) to allow for multiple solution files to contain the same
          project files without having to regenerate the solutions.

Wed Jul 24 13:42:37 2002  Steve Huston  <shuston@riverace.com>

        * ace/OS.cpp (uname): Added case for PROCESSOR_ARCHITECTURE_IA64
          when decoding processor type.

Wed Jul 24 10:58:22 2002  Steve Huston  <shuston@riverace.com>

        * ace/Acceptor.cpp (ACE_Acceptor::handle_input): When calling select(),
          use a int value instead of casting a ACE_HANDLE to an int.
